# melody

./: .gitignore  Package.swift  README.md  jitpack.yml
.github/: FUNDING.yml
Android/: build.gradle.kts  gradlew  local.properties  settings.gradle.kts
Android/gradle/: libs.versions.toml
Android/lua-native/: build.gradle.kts
Android/lua-native/src/main/cpp/: CMakeLists.txt  lua_bridge.c
Android/melody-core/: build.gradle.kts
Android/melody-runtime/: build.gradle.kts
Android/melody-widgets/: build.gradle.kts  settings.gradle.kts
Sources/CLI/: AndroidProjectGenerator.swift  MelodyCLI.swift  XcodeProjectGenerator.swift
Sources/CLI/Commands/: BuildCommand.swift  CreateCommand.swift  DevCommand.swift  GenerateWidgetsCommand.swift  PluginsCommand.swift  ValidateCommand.swift
Sources/CLI/DevServer/: DevPreviewWindow.swift  StaticFileServer.swift  WebSocketServer.swift
Sources/CLua/include/: CLua.h  module.modulemap
Sources/Core/Schema/: Value.swift
Sources/Core/YAMLParser/: AppParser.swift
Sources/Runtime/Components/: MelodyButton.swift  MelodyChart.swift  MelodyDivider.swift  (+17 more)
Sources/Widgets/: MelodyTimelineProvider.swift  MelodyWidgetView.swift  WidgetComponentRenderer.swift  WidgetConfigStore.swift  WidgetDataProvider.swift  WidgetExpressionResolver.swift  WidgetLuaVM.swift  WidgetQueryRunner.swift  WidgetStyleModifier.swift
Tests/CoreTests/: AppParserTests.swift
Tests/RuntimeTests/: LuaVMTests.swift
docs/: api-reference.md  getting-started.md  tutorial.md
docs/guides/: components.md  core-concepts.md  navigation.md  plugins.md  theming.md
(+138 files in other folders)
